added NF (northflank) key names

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=xpns
 
 # H2 database configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=${NF_XPNSDB_POSTGRES_URI}
+spring.datasource.username=${NF_XPNSDB_USERNAME}
+spring.datasource.password=${NF_XPNSDB_PASSWORD}
 
 # JPA / Hibernate configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
