fix datasource url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=xpns
 
 # H2 database configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${NF_XPNSDB_POSTGRES_URI}
+spring.datasource.url=${NF_XPNSDB_JDBC_POSTGRES_URI}
 spring.datasource.username=${NF_XPNSDB_USERNAME}
 spring.datasource.password=${NF_XPNSDB_PASSWORD}
 
